<resources>
    <string name="app_name">Popular Movies</string>
    <string name="offline_text">You\'re Offline</string>
    <string name="action_sorting">Sort Order</string>

    <string name="pref_sortOrder_label">Sort By</string>
    <string name="pref_by_popular_label">Popular Movies</string>
    <string name="pref_by_rating_label">Top Rated Movie</string>

    <string name="pref_sortOrder_key" translatable="false">sort by</string>
    <string name="pref_by_popular_value" translatable="false">popular</string>
    <string name="pref_by_rating_value" translatable="false">top_rated</string>

    <string name="movie_title">MOVIE TITLE</string>
    <string name="user_rating">User Rating</string>
    <string name="default_rating_value">8.9</string>
    <string name="release_date_label">Release date</string>
    <string name="default_release_date">20 DEC 2017</string>
    <string name="plot_synopsis_label">Plot Synopsis</string>
    <string name="movie_poster_desc">This is the movie poster</string>
    <string name="default_plot_synopsis">When was the last time you checked your watch?</string>
</resources>
